--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "aws-sdk": "^2.1075.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0"
   }
 }
